--- a/index_backup.html
+++ b/index_backup.html
@@ -13,12 +13,12 @@
         <span class="menu_title">对称性加密解密</span>
         <ul>
             <li id="des" onclick="location.href='index.html'">DES</li>
-            <li id="des_3" onclick="location.href='AES.html'">3DES</li>
+            <li id="des_3" onclick="location.href='DES3.html'">3DES</li>
             <li id="aes" onclick="location.href='AES.html'">AES</li>
         </ul>
         <span class="menu_title">非对称性加密解密</span>
         <ul>
-            <li id="rsa_pub" onclick="location.href='AES.html'">RSA</li>
+            <li id="rsa" onclick="location.href='RSA.html'">RSA</li>
             <li id="rsa_pri" onclick="location.href='AES.html'">数字证书</li>
         </ul>
     </div>
@@ -44,6 +44,6 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="js/indexPage.js"></script>
+    <script type="text/javascript" src="js/DESPage.js"></script>
 </body>
 </html>
