--- a/DES3.html
+++ b/DES3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>不惧“窥探” - AES</title>
+    <title>不惧“窥探” - DES</title>
     <link rel="stylesheet" type="text/css" href="styles/main_styles.css"/>
     <link rel="stylesheet" type="text/css" href="styles/index_styles.css"/>
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
@@ -47,8 +47,8 @@
                 <input id="key" class="default_input" placeholder="密钥必须8/16/32位"/>
             </div>
             <div class="btn_line">
-                <button id="encryption" class="main_btn_style">AES加密</button>
-                <button id="decryption" class="main_btn_style" style="margin-left: 10px">AES解密</button>
+                <button id="encryption" class="main_btn_style">3DES加密</button>
+                <button id="decryption" class="main_btn_style" style="margin-left: 10px">3DES解密</button>
             </div>
         </div>
         <div class="input_content">
@@ -57,6 +57,6 @@
     </div>
 
     <script type="text/javascript" src="js/dialog_tips.js"></script>
-    <script type="text/javascript" src="js/AESPage.js"></script>
+    <script type="text/javascript" src="js/DES3Page.js"></script>
 </body>
 </html>
