--- a/index_backup.html
+++ b/index_backup.html
@@ -19,7 +19,7 @@
         <span class="menu_title">非对称性加密解密</span>
         <ul>
             <li id="rsa" onclick="location.href='RSA.html'">RSA</li>
-            <li id="rsa_pri" onclick="location.href='AES.html'">数字证书</li>
+            <li id="rsa_pri" onclick="showTip('需下载文件！下载完成后，请运行run.bat！');window.open('asstes/数字证书.zip');">数字证书</li>
         </ul>
     </div>
 
